<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".errorScreen.ErrorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/error_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/server_down"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_rectangle_card"
            />
        <TextView
            android:id="@+id/error_msg_1"
            android:layout_below="@id/error_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4A4A4A"
            android:layout_marginTop="24dp"
            android:text="@string/error_server_1"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/error_msg_2"
            android:layout_below="@id/error_msg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#929292"
            android:layout_marginTop="8dp"
            android:text="@string/error_server_2"
            android:fontFamily="sans-serif"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxWidth="328dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_alignParentBottom="true"
            android:text="@string/retry_button"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif-medium"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_rectangle_button"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>