<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.mkology.thelearningapp.loginPage.MainActivity">


    <TextView
        android:id="@+id/login_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_title"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:layout_above="@id/cardLogin"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="0dp"
        android:id="@+id/cardLogin"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:rotation="180"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_triangle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="90dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/mail_login"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:background="@drawable/et_bg_login"
                android:hint="@string/login_username"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="20dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:background="@drawable/et_bg_login"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/login_password"
                android:textCursorDrawable="@null"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/response_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="40dp"
                android:layout_gravity="left"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/log_in"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textColor="@color/colorBlue"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="70dp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>